bug: Move 'jordanbaird-ice' from brew to cask installation

--- a/packages/macos/Brewfile
+++ b/packages/macos/Brewfile
@@ -25,7 +25,6 @@ brew 'fzf'
 brew 'gh'
 brew 'helix'
 brew 'jless'
-brew 'jordanbaird-ice'
 brew 'mas'
 brew 'mise'
 brew 'scrcpy'
@@ -47,6 +46,7 @@ cask 'docker'
 cask 'filen'
 cask 'font-fira-code'
 cask 'google-chrome'
+cask 'jordanbaird-ice'
 cask 'kdiff3'
 cask 'localsend'
 cask 'maccy'
