feat: Add `witr` package including its abbreviations

--- a/packages/Brewfile
+++ b/packages/Brewfile
@@ -23,6 +23,7 @@ brew 'fish'
 brew 'fisher'
 brew 'fzf'
 brew 'gh'
+brew 'goto-ssh'
 brew 'helix'
 brew 'jless'
 brew 'mas'
@@ -34,7 +35,7 @@ brew 'superfile'
 brew 'telnet'
 brew 'tig'
 brew 'tw93/tap/mole'
-brew 'goto-ssh'
+brew 'witr'
 brew 'xh'
 brew 'zoxide'
 
@@ -70,5 +71,5 @@ cask 'viber'
 cask 'visual-studio-code'
 cask 'vlc'
 cask 'wailbrew'
-cask 'whatsapp'
 cask 'wezterm'
+cask 'whatsapp'
