--- a/packages/Brewfile
+++ b/packages/Brewfile
@@ -50,7 +50,7 @@ cask 'filen'
 cask 'flameshot'
 cask 'font-fira-code'
 cask 'google-chrome'
-cask 'kdiff3'
+cask 'google-drive'
 cask 'localsend'
 cask 'maccy'
 cask 'macfuse'
