fix: Update `flameshot.ini` to enhance configuration settings

--- a/settings/flameshot.ini
+++ b/settings/flameshot.ini
@@ -1,7 +1,10 @@
 [General]
 contrastOpacity=188
+copyPathAfterSave=true
 filenamePattern=%Y_%m_%d_T_%H_%M
+saveLastRegion=true
 savePath=$HOME/Desktop
+showStartupLaunchMessage=false
 startupLaunch=true
 
 [Shortcuts]
