--- a/settings/aerospace.toml
+++ b/settings/aerospace.toml
@@ -173,6 +173,10 @@ cmd-semicolon = 'exec-and-forget osascript ~/.config/scripts/open_wezterm.scpt'
 ctrl-shift-l = 'exec-and-forget ~/.config/scripts/lock_screen.sh'
 cmd-shift-l = 'exec-and-forget ~/.config/scripts/lock_screen.sh'
 
+# Screen recording.
+ctrl-shift-b = 'exec-and-forget open -a Screenshot'
+cmd-shift-b = 'exec-and-forget open -a Screenshot'
+
 # TODO: Add keybindings to trigger system shutdown and restart.
 
 # 'service' binding mode declaration.
