feat: Add `datagrip` to `Brewfile` applications

--- a/packages/Brewfile
+++ b/packages/Brewfile
@@ -46,6 +46,7 @@ cask '1password-cli'
 cask 'adobe-acrobat-reader'
 cask 'android-platform-tools'
 cask 'brave-browser'
+cask 'datagrip'
 # TODO: Maybe replace `docker-desktop` with `podman-desktop` to support kubernetes too.
 cask 'docker-desktop'
 cask 'filen'
