feat: Add `AltTab` application and keybindings

--- a/packages/Brewfile
+++ b/packages/Brewfile
@@ -44,6 +44,7 @@ brew 'zoxide'
 cask '1password'
 cask '1password-cli'
 cask 'adobe-acrobat-reader'
+cask 'alt-tab'
 cask 'android-platform-tools'
 cask 'brave-browser'
 cask 'datagrip'
