feat: Add `Nerd Font` variant of `Fira Code`

--- a/packages/Brewfile
+++ b/packages/Brewfile
@@ -49,6 +49,7 @@ cask 'docker-desktop'
 cask 'filen'
 cask 'flameshot'
 cask 'font-fira-code'
+cask 'font-fira-code-nerd-font'
 cask 'google-chrome'
 cask 'google-drive'
 cask 'localsend'
