--- a/settings/aerospace.toml
+++ b/settings/aerospace.toml
@@ -156,7 +156,7 @@ alt-k = 'exec-and-forget open -a /Applications/Obsidian.app'
 
 alt-quote = 'exec-and-forget open -a "/System/Applications/System Settings.app"'
 
-alt-slash = 'exec-and-forget "/Applications/Google Chrome.app/Contents/MacOS/Google Chrome" --app=https://gemini.google.com'
+alt-slash = 'exec-and-forget open -a /Applications/Gemini.app'
 
 alt-semicolon = 'exec-and-forget osascript ~/.config/scripts/open_wezterm.scpt'
 
